Update application image

--- a/everload-front/src/app/components/home/home.component.html
+++ b/everload-front/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home-container">
   <header class="logo-container">
-    <img src="/assets/EverLoad home logo.png" alt="Everload Logo" class="everload-logo">
+    <img src="/assets/EverloadLogo.png" alt="Everload Logo" class="everload-logo">
 
     <!-- ====== MENÚ HAMBURGUESA ====== -->
     <input type="checkbox" id="navcheck" role="button" title="menu" aria-label="Toggle navigation menu">
